--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -117,7 +117,6 @@
 }
 
 
-
 @article{Goodman:2010ku,
       author         = "Goodman, Jessica and Ibe, Masahiro and Rajaraman, Arvind
                         and Shepherd, William and Tait, Tim M.P. and others",
@@ -1814,6 +1813,40 @@
       reportNumber   = "FERMILAB-PUB-11-448-T",
       SLACcitation   = "%%CITATION = ARXIV:1106.0522;%%",
 }
+
+@article{Sjostrand:2014zea,
+      author         = "Sjöstrand, Torbjörn and Ask, Stefan and Christiansen,
+                        Jesper R. and Corke, Richard and Desai, Nishita and
+                        others",
+      title          = "{An Introduction to PYTHIA 8.2}",
+      journal        = "Comput.Phys.Commun.",
+      volume         = "191",
+      pages          = "159-177",
+      doi            = "10.1016/j.cpc.2015.01.024",
+      year           = "2015",
+      eprint         = "1410.3012",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "LU-TP-14-36, MCNET-14-22, CERN-PH-TH-2014-190,
+                        FERMILAB-PUB-14-316-CD, DESY-14-178, SLAC-PUB-16122",
+      SLACcitation   = "%%CITATION = ARXIV:1410.3012;%%",
+}
+
+@article{Lonnblad:2011xx,
+      author         = "Lonnblad, Leif and Prestel, Stefan",
+      title          = "{Matching Tree-Level Matrix Elements with Interleaved
+                        Showers}",
+      journal        = "JHEP",
+      volume         = "1203",
+      pages          = "019",
+      doi            = "10.1007/JHEP03(2012)019",
+      year           = "2012",
+      eprint         = "1109.4829",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1109.4829;%%",
+}
+
 
 @article{Sjostrand:2006za,
       author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
